Fixed scrollbars

--- a/src/Assets/css/style.scss
+++ b/src/Assets/css/style.scss
@@ -39,7 +39,7 @@ iframe {
     height: 70px;
     border-bottom: 1px solid #dbe2e8;
     box-shadow: inset 0 0 0 0 #dbe2e8, 0 2px 1px 0 rgba(47, 61, 73, 0.05);
-    padding-left: 80px;
+    // padding-left: 80px;
     font-size: 30px;
     display: flex;
     flex-direction: column;
@@ -52,13 +52,17 @@ iframe {
     background-color: #fafbfc;
     padding-top: 50px;
     padding-bottom: 50px;
-    padding-left: 80px;
-    padding-right: 80px;
+    margin-left: 0;
+    margin-right: 0;
+    overflow-x: hidden;
+    // padding-left: 80px;
+    // padding-right: 80px;
 }
 
 .sidebar {
     height: 100vh;
     padding-right: 0;
+    overflow: hidden;
 
     a:hover {
         text-decoration: none;
@@ -98,6 +102,10 @@ iframe {
     height: calc(100% - 70px);
     overflow-y: scroll;
     background-color: #f8f8f8;
+}
+
+.sidebar-toc::-webkit-scrollbar {
+    display: none;
 }
 
 /* Code blocks */
@@ -219,5 +227,13 @@ pre {
 @media (max-width: 768px) {
     .sidebar {
         height: 100%;
+    }
+
+    .content {
+        height: 100%;
+    }
+
+    .content-child {
+        overflow-y: hidden;
     }
 }
